# sign_in_project

./: .gitignore  README.md  参考文献.txt  项目简介.md
HW_platform/: README.md
HW_platform/SCHDOC/: PcbLib1.PcbLib  README.md
HW_platform/sign-in_system_project/: ESP.SchDoc  STM32H750.SchDoc  my_sch.SchDoc  sign-in_system_project.PrjPcb
HW_platform/sign_in_slave/: .mxproject  README.md
HW_platform/sign_in_trans/: README.md  sdkconfig.old
HardWarePlatform/: README.md
HardWarePlatform/Compute/: .mxproject  Compute.ioc  README.md  sign_in_slave.ioc
HardWarePlatform/Control/: CMakeLists.txt  Makefile  README.md
HardWarePlatform/HardWare/: ESP.SchDoc  PCB.PcbDoc  README.md  STM32H750.SchDoc  sign-in_system_project.PrjPcb
Hardware/: README.md  SPI自定义协议.xlsx  SPI自定义协议时序.xlsx
Hardware/Compute/: .gitignore  .mxproject  Compute.ioc  README.md
Hardware/Control/: .gitignore  CMakeLists.txt  README.md  partitions.csv
Hardware/Control/main/: CMakeLists.txt  app_camera.c  app_main.c  app_spi.c  app_web.c  app_wifi.c  main.c  spi.c  wifi.c
Hardware/Control/main/include/: app_camera.h  app_main.h  app_spi.h  app_web.h  app_wifi.h  main.h  spi.h
Hardware/Hardware/: .gitignore  Camera.SchDoc  Camera_bak.SchDoc  ESP.SchDoc  General.SchDoc  PCB.PcbDoc.htm  Power.SchDoc  README.md  STM32H750.SchDoc  Screen.SchDoc  Sensor.SchDoc
Service/: README.md
SoftWarePlatform/Client/: README.md  settings.gradle
SoftWarePlatform/DataBase/: README.md  signin_db.sql
SoftWarePlatform/Server/: pom.xml  (+1 more)
Software/: README.md
report/: 前后端架构图.pptx  基于人脸识别的课程签到系统.pptx  大创项目简述beta1.0.md
(+513 files in other folders)
